--- a/arithmetic_practice/index2.html
+++ b/arithmetic_practice/index2.html
@@ -6,37 +6,103 @@
     <title>Math Practice</title>
     <style>
         body {
-            font-family: Arial, sans-serif; 
-            display: flex; 
-            flex-direction: column; 
-            align-items: center; 
+            font-family: Arial, sans-serif;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
             justify-content: center;
             height: 100vh;
-            background-color: #f4f4f9; 
+            background-color: #f4f4f9;
             margin: 0;
+            overflow: hidden;
         }
-        #container {
-            text-align: center;
-            background: white; 
-            padding: 20px;
+        #controls {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            background: #fff;
+            padding: 15px;
+            border-radius: 10px;
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+            font-size: 16px;
+        }
+        #controls label {
+            display: block;
+            margin-bottom: 10px;
+        }
+        #controls input, #controls select {
+            width: 80px;
+            padding: 5px;
+            margin-top: 5px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            font-size: 14px;
+        }
+        #controls input[type=checkbox] {
+            width: auto;
+        }
+        #info {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            text-align: right;
+            background: #fff;
+            padding: 15px;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            width: 200px;
+            font-size: 16px;
         }
-        #question {
-            font-size: 36px; 
-            margin: 20px;
+        #info div {
+            margin-bottom: 10px;
+        }
+        #timer span {
+            font-weight: bold;
+        }
+        #question-area {
+            text-align: center;
+            font-size: 48px;
+            color: #333;
+            transition: background-color 0.2s;
+            background-color: #ddd; /* Grey shade before start */
+            padding: 20px;
+            border-radius: 10px;
+            width: 600px; /* Fixed width for consistency */
+            font-family: 'Courier New', monospace;
+        }
+        #question-area.started {
+            background-color: transparent;
         }
         #answer {
-            font-size: 24px; 
-            width: 100px; 
+            font-size: 48px;
+            width: 200px;
             text-align: center;
+            border: none;
+            border-bottom: 2px solid #333;
+            background: transparent;
+            outline: none;
+            margin-bottom: 20px;
+            font-family: 'Courier New', monospace;
         }
-        #controls, #score, #timer, #upcoming-questions {
-            margin: 10px 0;
+        #answer::-webkit-outer-spin-button,
+        #answer::-webkit-inner-spin-button,
+        #minRange::-webkit-outer-spin-button,
+        #minRange::-webkit-inner-spin-button,
+        #maxRange::-webkit-outer-spin-button,
+        #maxRange::-webkit-inner-spin-button {
+            -webkit-appearance: none;
+            margin: 0;
+        }
+        #answer[type=number], #minRange[type=number], #maxRange[type=number] {
+            -moz-appearance: textfield;
+        }
+        #upcoming-questions {
+            margin-top: 0;
         }
         .upcoming-question {
-            opacity: 0.6; 
+            opacity: 0.6;
             transition: opacity 0.3s;
+            font-family: 'Courier New', monospace;
         }
         .upcoming-question:nth-child(2) {
             opacity: 0.4;
@@ -44,53 +110,86 @@
         .upcoming-question:nth-child(3) {
             opacity: 0.2;
         }
+        .question {
+            white-space: pre;
+            letter-spacing: -1px; /* Reduce spacing between characters */
+        }
     </style>
 </head>
 <body>
-    <div id="container">
-        <h1>Math Practice</h1>
-        <div id="controls">
-            <label>Range: 
-                <input type="number" id="minRange" placeholder="Min" style="width: 60px;">
-                -
-                <input type="number" id="maxRange" placeholder="Max" style="width: 60px;">
-            </label>
-            <label>Time: 
-                <select id="timeSelect">
-                    <option value="60">60s</option>
-                    <option value="120">120s</option>
-                </select>
-            </label>
-            <button onclick="startPractice()">Start</button>
-        </div>
-        <div id="question"></div>
-        <input type="number" id="answer" placeholder="Answer" oninput="checkAnswer()">
-        <div id="score"></div>
-        <div id="timer"></div>
+    <div id="controls">
+        <label>Range:
+            <input type="number" id="minRange" placeholder="Min" value="2">
+            -
+            <input type="number" id="maxRange" placeholder="Max" value="9">
+        </label>
+        <label>Time:
+            <select id="timeSelect">
+                <option value="60">60s</option>
+                <option value="120">120s</option>
+            </select>
+        </label>
+        <label>
+            <input type="checkbox" id="addition" checked>Addition
+        </label>
+        <label>
+            <input type="checkbox" id="subtraction">Subtraction
+        </label>
+        <label>
+            <input type="checkbox" id="multiplication" checked>Multiplication
+        </label>
+        <label>
+            <input type="checkbox" id="division">Division
+        </label>
+    </div>
+    <div id="info">
+        <div id="score">Score: 0</div>
+        <div id="timer">Time: <span>60s</span></div>
+        <div id="cpm">CPM: 0</div>
+        <div id="cpm-history">CPM History:</div>
+    </div>
+    <div id="question-area">
+        <input type="number" id="answer" onkeydown="restartOnEnter(event)" oninput="checkAnswer()">
+        <div id="question" class="question"></div>
         <div id="upcoming-questions"></div>
     </div>
+
+    <audio id="click-sound" src="res/arcade.wav"></audio>
 
     <script>
         let correctAnswer;
         let score = 0;
         let total = 0;
         let timer;
+        let timerStarted = false;
         const upcomingQuestions = [];
+        const cpmHistory = [];
 
         function getRandomInt(min, max) {
             return Math.floor(Math.random() * (max - min + 1)) + min;
         }
 
         function generateQuestion() {
-            const minRange = parseInt(document.getElementById('minRange').value) || 1;
-            const maxRange = parseInt(document.getElementById('maxRange').value) || 10;
+            const minRange = parseInt(document.getElementById('minRange').value) || 2;
+            const maxRange = parseInt(document.getElementById('maxRange').value) || 9;
             const a = getRandomInt(minRange, maxRange);
             const b = getRandomInt(minRange, maxRange);
-            const isAddition = Math.random() < 0.5;
-            if (isAddition) {
-                return { question: `${a} + ${b}`, answer: a + b };
-            } else {
-                return { question: `${a} x ${b}`, answer: a * b };
+            const operations = [];
+            if (document.getElementById('addition').checked) operations.push('+');
+            if (document.getElementById('subtraction').checked) operations.push('-');
+            if (document.getElementById('multiplication').checked) operations.push('*');
+            if (document.getElementById('division').checked) operations.push('/');
+            const operation = operations[Math.floor(Math.random() * operations.length)];
+            switch (operation) {
+                case '+':
+                    return { question: `${a} + ${b}`, answer: a + b };
+                case '-':
+                    return { question: `${a} - ${b}`, answer: a - b };
+                case '*':
+                    return { question: `${a} * ${b}`, answer: a * b };
+                case '/':
+                    const numerator = a * b; // Ensure the numerator is a multiple of b
+                    return { question: `${numerator} / ${b}`, answer: numerator / b };
             }
         }
 
@@ -99,7 +198,7 @@
             upcomingQuestionsDiv.innerHTML = '';
             for (let i = 1; i < upcomingQuestions.length; i++) {
                 const questionDiv = document.createElement('div');
-                questionDiv.className = 'upcoming-question';
+                questionDiv.className = 'upcoming-question question';
                 questionDiv.innerText = upcomingQuestions[i].question;
                 upcomingQuestionsDiv.appendChild(questionDiv);
             }
@@ -108,6 +207,7 @@
         function checkAnswer() {
             const answer = parseInt(document.getElementById('answer').value);
             if (answer === correctAnswer) {
+                playClickSound();
                 score++;
                 total++;
                 upcomingQuestions.shift();
@@ -117,15 +217,66 @@
                 document.getElementById('question').innerText = upcomingQuestions[0].question;
                 document.getElementById('answer').value = '';
                 updateUpcomingQuestions();
+                document.getElementById('score').innerText = `Score: ${score}`;
+                if (!timerStarted) {
+                    startTimer();
+                }
             }
         }
 
-        function startPractice() {
+        function playClickSound() {
+            const clickSound = document.getElementById('click-sound');
+            clickSound.currentTime = 0;
+            clickSound.play();
+        }
+
+        function startTimer() {
+            timerStarted = true;
             score = 0;
             total = 0;
             const timeLimit = parseInt(document.getElementById('timeSelect').value);
             document.getElementById('score').innerText = `Score: ${score}`;
-            document.getElementById('timer').innerText = `Time: ${timeLimit}s`;
+            document.getElementById('timer').innerHTML = `Time: <span>${timeLimit}s</span>`;
+            document.getElementById('cpm').innerText = `CPM: 0`;
+            document.getElementById('question-area').classList.add('started');
+            timer = setInterval(() => {
+                const currentTime = parseInt(document.querySelector('#timer span').innerText.replace('s', ''));
+                if (currentTime > 0) {
+                    document.querySelector('#timer span').innerText = `${currentTime - 1}s`;
+                    const cpm = (score / (timeLimit - currentTime)) * 60;
+                    document.getElementById('cpm').innerText = `CPM: ${cpm.toFixed(2)}`;
+                } else {
+                    clearInterval(timer);
+                    const cpm = (score / timeLimit) * 60;
+                    cpmHistory.push(cpm.toFixed(2));
+                    updateCpmHistory();
+                    setTimeout(() => {
+                        initializePractice();
+                    }, 500); // Pause for 0.5 seconds before restarting
+                }
+            }, 1000);
+        }
+
+        function updateCpmHistory() {
+            const cpmHistoryDiv = document.getElementById('cpm-history');
+            cpmHistoryDiv.innerHTML = 'CPM History:<br>' + cpmHistory.join('<br>');
+        }
+
+        function restartOnEnter(event) {
+            if (event.key === "Enter") {
+                initializePractice();
+                document.getElementById('answer').focus();
+            }
+        }
+
+        function initializePractice() {
+            clearInterval(timer);
+            timerStarted = false;
+            document.getElementById('question-area').classList.remove('started');
+            document.getElementById('answer').value = '';
+            document.getElementById('score').innerText = 'Score: 0';
+            document.getElementById('timer').innerHTML = `Time: <span>${document.getElementById('timeSelect').value}s</span>`;
+            document.getElementById('cpm').innerText = `CPM: 0`;
             upcomingQuestions.length = 0;
             for (let i = 0; i < 4; i++) {
                 const nextQuestion = generateQuestion();
@@ -134,18 +285,13 @@
             correctAnswer = upcomingQuestions[0].answer;
             document.getElementById('question').innerText = upcomingQuestions[0].question;
             updateUpcomingQuestions();
-            timer = setInterval(() => {
-                const currentTime = parseInt(document.getElementById('timer').innerText.split(' ')[1].replace('s', ''));
-                if (currentTime > 0) {
-                    document.getElementById('timer').innerText = `Time: ${currentTime - 1}s`;
-                } else {
-                    clearInterval(timer);
-                    document.getElementById('question').innerText = `Time's up! Your accuracy is ${(score / total) * 100}%`;
-                    document.getElementById('upcoming-questions').innerHTML = '';
-                }
-            }, 1000);
+            document.getElementById('answer').focus();
         }
+
+        document.addEventListener('DOMContentLoaded', (event) => {
+            initializePractice();
+            document.getElementById('answer').focus();
+        });
     </script>
 </body>
 </html>
-
