--- a/arithmetic_practice/index6.html
+++ b/arithmetic_practice/index6.html
@@ -152,16 +152,18 @@
             white-space: pre;
             letter-spacing: -1px; /* Reduce spacing between characters */
         }
-        .history-row:nth-child(odd) {
-            background-color: #f4f4f4;
+        .grid-container {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 10px;
+            font-size: 14px;
         }
-        .history-row:nth-child(even) {
-            background-color: #e0e0e0;
-        }
-        .history-row {
-            padding: 5px;
+        .grid-item {
+            background-color: #fff;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
             text-align: center;
-            font-size: 16px;
         }
     </style>
 </head>
@@ -198,7 +200,8 @@
         </label>
     </div>
     <div id="info">
-        <div id="cpm-history"></div>
+        <div id="score">Score: 0</div>
+        <div class="grid-container" id="cpm-history">CPM History:</div>
     </div>
     <div id="progress-container">
         <div id="progress-bar"></div>
@@ -289,6 +292,7 @@
                 document.getElementById('question').innerText = upcomingQuestions[0].question;
                 document.getElementById('answer').value = '';
                 updateUpcomingQuestions();
+                document.getElementById('score').innerText = `Score: ${score}`;
                 if (!timerStarted) {
                     startTimer();
                 }
@@ -311,6 +315,7 @@
             score = 0;
             total = 0;
             const timeLimit = parseInt(document.getElementById('timeSelect').value);
+            document.getElementById('score').innerText = `Score: ${score}`;
             document.getElementById('cpm-display').innerText = `CPM: 0`;
             document.getElementById('question-area').classList.add('started');
 
@@ -324,18 +329,12 @@
                 const currentTime = parseInt(document.querySelector('#progress-bar').style.width.replace('%', ''));
                 if (currentTime > 0) {
                     progressBar.style.width = `${currentTime - decrement}%`;
-                    let cpm = Math.floor((score / (timeLimit - (currentTime / decrement))) * 60);
-                    if (isNaN(cpm) || !isFinite(cpm)) {
-                        cpm = 0;
-                    }
-                    document.getElementById('cpm-display').innerText = `CPM: ${cpm}`;
+                    const cpm = (score / (timeLimit - (currentTime / decrement))) * 60;
+                    document.getElementById('cpm-display').innerText = `CPM: ${cpm.toFixed(2)}`;
                 } else {
                     clearInterval(timer);
-                    let cpm = Math.floor((score / timeLimit) * 60);
-                    if (isNaN(cpm) || !isFinite(cpm)) {
-                        cpm = 0;
-                    }
-                    cpmHistory.push(cpm);
+                    const cpm = (score / timeLimit) * 60;
+                    cpmHistory.push(cpm.toFixed(2));
                     updateCpmHistory();
                     setTimeout(() => {
                         initializePractice();
@@ -346,10 +345,10 @@
 
         function updateCpmHistory() {
             const cpmHistoryDiv = document.getElementById('cpm-history');
-            cpmHistoryDiv.innerHTML = '';
+            cpmHistoryDiv.innerHTML = '<div class="grid-item">CPM History:</div>';
             cpmHistory.forEach(cpm => {
                 const cpmItem = document.createElement('div');
-                cpmItem.className = 'history-row';
+                cpmItem.className = 'grid-item';
                 cpmItem.innerText = cpm;
                 cpmHistoryDiv.appendChild(cpmItem);
             });
@@ -367,6 +366,7 @@
             timerStarted = false;
             document.getElementById('question-area').classList.remove('started');
             document.getElementById('answer').value = '';
+            document.getElementById('score').innerText = 'Score: 0';
             document.getElementById('cpm-display').innerText = `CPM: 0`;
             upcomingQuestions.length = 0;
             document.getElementById('progress-bar').style.width = '100%';
