--- a/arithmetic_practice/index_err3.html
+++ b/arithmetic_practice/index_err3.html
@@ -127,11 +127,15 @@
         #divMin::-webkit-outer-spin-button,
         #divMin::-webkit-inner-spin-button,
         #divMax::-webkit-outer-spin-button,
-        #divMax::-webkit-inner-spin-button {
+        #divMax::-webkit-inner-spin-button,
+        #sqMin::-webkit-outer-spin-button,
+        #sqMin::-webkit-inner-spin-button,
+        #sqMax::-webkit-outer-spin-button,
+        #sqMax::-webkit-inner-spin-button {
             -webkit-appearance: none;
             margin: 0;
         }
-        #answer[type=number], #addMin[type=number], #addMax[type=number], #subMin[type=number], #subMax[type=number], #mulMin[type=number], #mulMax[type=number], #divMin[type=number], #divMax[type=number] {
+        #answer[type=number], #addMin[type=number], #addMax[type=number], #subMin[type=number], #subMax[type=number], #mulMin[type=number], #mulMax[type=number], #divMin[type=number], #divMax[type=number], #sqMin[type=number], #sqMax[type=number] {
             -moz-appearance: textfield;
         }
         #upcoming-questions {
@@ -195,8 +199,8 @@
         </label>
         <label>
             <input type="checkbox" id="squares">Squares
-            <input type="number" id="squaresMin" value="2">
-            <input type="number" id="squaresMax" value="9">
+            <input type="number" id="sqMin" value="2">
+            <input type="number" id="sqMax" value="12">
         </label>
         <label>
             <input type="button" id="toggleSound" value="Sound: Off" onclick="toggleSound()">
@@ -267,10 +271,10 @@
                     const numerator = aDiv * bDiv; // Ensure the numerator is a multiple of bDiv
                     return { question: `${numerator} / ${bDiv}`, answer: numerator / bDiv };
                 case '^2':
-                    const squaresMin = parseInt(document.getElementById('squaresMin').value) || 2;
-                    const squaresMax = parseInt(document.getElementById('squaresMax').value) || 9;
-                    const aSquare = getRandomInt(squaresMin, squaresMax);
-                    return { question: `${aSquare}^2`, answer: aSquare * aSquare };
+                    const sqMin = parseInt(document.getElementById('sqMin').value) || 2;
+                    const sqMax = parseInt(document.getElementById('sqMax').value) || 12;
+                    const num = getRandomInt(sqMin, sqMax);
+                    return { question: `${num}^2`, answer: num * num };
             }
         }
 
@@ -372,30 +376,4 @@
                 document.getElementById('answer').focus();
             }
         }
-
-        function initializePractice() {
-            clearInterval(timer);
-            timerStarted = false;
-            document.getElementById('question-area').classList.remove('started');
-            document.getElementById('answer').value = '';
-            document.getElementById('cpm-display').innerText = `CPM: 0`;
-            upcomingQuestions.length = 0;
-            document.getElementById('progress-bar').style.width = '100%';
-            for (let i = 0; i < 4; i++) {
-                const nextQuestion = generateQuestion();
-                upcomingQuestions.push(nextQuestion);
-            }
-            correctAnswer = upcomingQuestions[0].answer;
-            document.getElementById('question').innerText = upcomingQuestions[0].question;
-            updateUpcomingQuestions();
-            document.getElementById('answer').focus();
-        }
-
-        document.addEventListener('DOMContentLoaded', (event) => {
-            initializePractice();
-            document.getElementById('answer').focus();
-        });
-    </script>
-</body>
-</html>
 
